--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
   
 keywords: Particle Accelerators, Beam Physics, Beam Dynamics, Machine Learning # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: 🚀 # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: site_icon.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://antglr.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
